# SI_2023

./: package-lock.json
04._basic_servers/dotnet/dotnet/: dotnet.sln
04._basic_servers/node/: app.js  functions.js  localhost.cer  package-lock.json  package.json
04._basic_servers/node/data/: me.csv
07._dotenv/node/: .env_sample  app.js  package.json
07._dotenv/python/: .env_sample  main.py  pyproject.toml
08._database_documentation/backup/: backup.sql
09._OpenAPI/node/: index.js  package-lock.json  package.json
09._OpenAPI/node/models/: User.js
09._OpenAPI/node/routes/: userRouter.js
1.parseData/: package-lock.json  package.json  script.js
1.parseData/data/: me.json  me.txt  me.xml  me.yaml
1.parseData_dotnet/DotnetParser/: DotnetParser.sln
12._server-sent-events/node/: index.js
12._server-sent-events/python/: main.py  pyproject.toml
14.Webhook/Webhook_integrator/: app.js  package-lock.json  package.json
14.Webhook/Webhook_server/: package-lock.json
17._multipart-forms/: index.html
17._multipart-forms/node/: app.js
17._multipart-forms/python/: main.py  pyproject.toml
19._web_scraping/python/1._data_scraper/: pyproject.toml
19._web_scraping/python/4._Scrapy_Wiki/: pyproject.toml
19._web_scraping/python/4._Scrapy_Wiki/wikicrawler/wikicrawler/spiders/: WikiPageSpider.py
2.Decode/: script.js
20._graphql/node/: index.js  package-lock.json  package.json
21._sqlite/node/: index.js
21._sqlite/node/database/: connection.js
auth-mand-2/: package-lock.json  package.json
auth-mand-2/src/: App.css  App.tsx  index.css  main.tsx
(+25 files in other folders)
