[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["maybeMike1 <mich8g52@stud.kea.dk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.22.0"
fastapi = "^0.95.1"
requests = "^2.30.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
