[tool.poetry]
name = "4-scrapy-wiki"
version = "0.1.0"
description = ""
authors = ["maybeMike1 <mich8g52@stud.kea.dk>"]
readme = "README.md"
packages = [{include = "4"}]

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
